<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/chitkara_login_logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/login"
                android:textColor="#C50505"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/usernameLogin"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/loginRollHint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/passwordTv"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/loginRollHint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="TextFields,TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvInstitute"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvInstitute"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/etInstitute"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="no"
                        android:ems="10"
                        android:hint="@string/etInstitute"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvSession"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvSession"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/etSession"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="no"
                        android:ems="10"
                        android:hint="@string/etSession"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/btnLogin"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>